--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -2,13 +2,16 @@ name: WakaTime Readme Stats
 
 on:
   schedule:
-    - cron: '0 * * * *'  
+    - cron: '0 * * * *' # runs hourly
   workflow_dispatch:
 
 jobs:
   update-readme:
     runs-on: ubuntu-latest
     steps:
-      - uses: athul/waka-readme@master
+      - name: WakaReadme
+        uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.WAKATIME_TOKEN }}
