--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -2,16 +2,15 @@ name: WakaTime Readme Stats
 
 on:
   schedule:
-    - cron: '0 * * * *' # runs hourly
+    - cron: '0 * * * *'
   workflow_dispatch:
 
 jobs:
   update-readme:
     runs-on: ubuntu-latest
     steps:
-      - name: WakaReadme
-        uses: athul/waka-readme@master
+      - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
         env:
-          GITHUB_TOKEN: ${{ secrets.WAKATIME_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
